@@ -16,7 +16,7 @@ import world.bentobox.bentobox.util.Util;
 
 /**
  * This command sets the center of the protected area.
- * The location can be anywhere inside the island range area. Therefore the protected
+ * The location can be anywhere inside the island range area. Therefore, the protected
  * range can be up to 2x the island range.
  * The location will change for all environments.
  * @author tastybento
@@ -69,7 +69,7 @@ public class AdminSetProtectionCenterCommand extends ConfirmableCommand
 
     private Location getLocation(List<String> args) {
         try {
-            int x = Integer.parseInt(args.get(0));
+            int x = Integer.parseInt(args.getFirst());
             int y = Integer.parseInt(args.get(1));
             int z = Integer.parseInt(args.get(2));
             return new Location(getWorld(), x, y, z);
