@@ -24,7 +24,6 @@ public class AdminSetrankCommand extends CompositeCommand {
     private int rankValue;
     private @Nullable UUID targetUUID;
     private @Nullable UUID ownerUUID;
-    private RanksManager rm;
 
     public AdminSetrankCommand(CompositeCommand adminCommand) {
         super(adminCommand, "setrank");
@@ -36,7 +35,6 @@ public class AdminSetrankCommand extends CompositeCommand {
         setOnlyPlayer(false);
         setParametersHelp("commands.admin.setrank.parameters");
         setDescription("commands.admin.setrank.description");
-        rm = getPlugin().getRanksManager();
     }
 
     @Override
@@ -47,13 +45,13 @@ public class AdminSetrankCommand extends CompositeCommand {
             return false;
         }
         // Get target player
-        targetUUID = Util.getUUID(args.get(0));
+        targetUUID = Util.getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Get rank
-        rankValue = rm.getRanks().entrySet().stream()
+        rankValue = RanksManager.getInstance().getRanks().entrySet().stream()
                 .filter(r -> user.getTranslation(r.getKey()).equalsIgnoreCase(args.get(1))).findFirst()
                 .map(Map.Entry::getValue).orElse(-999);
         if (rankValue < RanksManager.BANNED_RANK) {
@@ -93,6 +91,7 @@ public class AdminSetrankCommand extends CompositeCommand {
 
     @Override
     public boolean execute(User user, String label, List<String> args) {
+        assert targetUUID != null;
         User target = User.getInstance(targetUUID);
         Island island;
         if (ownerUUID != null) {
@@ -121,8 +120,8 @@ public class AdminSetrankCommand extends CompositeCommand {
             ownerName = target.getName();
         }
         user.sendMessage("commands.admin.setrank.rank-set",
-                "[from]", user.getTranslation(rm.getRank(currentRank)),
-                "[to]", user.getTranslation(rm.getRank(rankValue)),
+                "[from]", user.getTranslation(RanksManager.getInstance().getRank(currentRank)), "[to]",
+                user.getTranslation(RanksManager.getInstance().getRank(rankValue)),
                 TextVariables.NAME, ownerName);
         return true;
     }
@@ -136,7 +135,7 @@ public class AdminSetrankCommand extends CompositeCommand {
 
         // Return the ranks
         if (args.size() == 3) {
-            return Optional.of(getPlugin().getRanksManager().getRanks()
+            return Optional.of(RanksManager.getInstance().getRanks()
                     .entrySet().stream()
                     .filter(entry -> entry.getValue() > RanksManager.VISITOR_RANK)
                     .map(entry -> user.getTranslation(entry.getKey())).toList());
