@@ -2,6 +2,8 @@ package world.bentobox.bentobox.api.commands.admin;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -11,17 +13,25 @@ import org.bukkit.entity.Player;
 import org.eclipse.jdt.annotation.Nullable;
 
 import world.bentobox.bentobox.api.commands.CompositeCommand;
+import world.bentobox.bentobox.api.commands.island.IslandGoCommand;
+import world.bentobox.bentobox.api.commands.island.IslandGoCommand.IslandInfo;
 import world.bentobox.bentobox.api.localization.TextVariables;
 import world.bentobox.bentobox.api.user.User;
 import world.bentobox.bentobox.database.objects.Island;
 import world.bentobox.bentobox.util.Util;
 import world.bentobox.bentobox.util.teleport.SafeSpotTeleport;
 
+/**
+ * Enables admins to teleport to a player's island, nether or end islands, 
+ * <p>
+ * For example /acid tp tastybento [island name] would teleport to tastybento's [named] island
+ * 
+ */
 public class AdminTeleportCommand extends CompositeCommand {
 
     private static final String NOT_SAFE = "general.errors.no-safe-location-found";
     private @Nullable UUID targetUUID;
-    private @Nullable User userToTeleport;
+    private Location warpSpot;
 
     /**
      * @param parent - parent command
@@ -37,23 +47,24 @@ public class AdminTeleportCommand extends CompositeCommand {
         setPermission("admin.tp");
         setParametersHelp("commands.admin.tp.parameters");
         setDescription("commands.admin.tp.description");
+        this.setOnlyPlayer(true);
     }
 
     @Override
     public boolean canExecute(User user, String label, List<String> args) {
-        if (args.size() != 1 && args.size() != 2) {
+        if (args.isEmpty()) {
             this.showHelp(this, user);
             return false;
         }
         // Check for console or not
-        if (!user.isPlayer() && args.size() != 2) {
+        if (!user.isPlayer()) {
             user.sendMessage("general.errors.use-in-game");
             return false;
         }
         // Convert name to a UUID
-        targetUUID = Util.getUUID(args.get(0));
+        targetUUID = Util.getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Check island exists
@@ -62,25 +73,6 @@ public class AdminTeleportCommand extends CompositeCommand {
             return false;
         }
 
-        if (args.size() == 2) {
-            // We are trying to teleport another player
-            UUID playerToTeleportUUID = Util.getUUID(args.get(1));
-            if (playerToTeleportUUID == null) {
-                user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(1));
-                return false;
-            } else {
-                userToTeleport = User.getInstance(playerToTeleportUUID);
-                if (!userToTeleport.isOnline()) {
-                    user.sendMessage("general.errors.offline-player");
-                    return false;
-                }
-            }
-        }
-        return true;
-    }
-
-    @Override
-    public boolean execute(User user, String label, List<String> args) {
         World world = getWorld();
         if (getLabel().equals("tpnether")) {
             world = getPlugin().getIWM().getNetherWorld(getWorld());
@@ -91,19 +83,46 @@ public class AdminTeleportCommand extends CompositeCommand {
             user.sendMessage(NOT_SAFE);
             return false;
         }
-        Location warpSpot = getSpot(world);
+        // Get default location if there are no arguments
+        warpSpot = getSpot(world);
         if (warpSpot == null) {
             user.sendMessage(NOT_SAFE);
             return false;
         }
+        if (args.size() == 1) {
+            return true;
+        }
 
+        // They named the island to go to
+        Map<String, IslandInfo> names = IslandGoCommand.getNameIslandMap(User.getInstance(targetUUID), getWorld());
+        final String name = String.join(" ", args.subList(1, args.size()));
+        if (!names.containsKey(name)) {
+            // Failed home name check
+            user.sendMessage("commands.island.go.unknown-home");
+            user.sendMessage("commands.island.sethome.homes-are");
+            names.keySet()
+                    .forEach(n -> user.sendMessage("commands.island.sethome.home-list-syntax", TextVariables.NAME, n));
+            return false;
+        } else if (names.size() > 1) {
+            IslandInfo info = names.get(name);
+            Island island = info.island();
+            warpSpot = island.getSpawnPoint(world.getEnvironment()) != null
+                    ? island.getSpawnPoint(world.getEnvironment())
+                    : island.getProtectionCenter().toVector().toLocation(world);
+        }
+        return true;
+    }
+
+    @Override
+    public boolean execute(User user, String label, List<String> args) {
+        Objects.requireNonNull(warpSpot);
         // Otherwise, ask the admin to go to a safe spot
         String failureMessage = user.getTranslation("commands.admin.tp.manual", "[location]", warpSpot.getBlockX() + " " + warpSpot.getBlockY() + " "
                 + warpSpot.getBlockZ());
         // Set the player
-        Player player = args.size() == 2 ? userToTeleport.getPlayer() : user.getPlayer();
+        Player player = user.getPlayer();
         if (args.size() == 2) {
-            failureMessage = userToTeleport.getTranslation(NOT_SAFE);
+            failureMessage = user.getTranslation(NOT_SAFE);
         }
 
         // Teleport
@@ -117,24 +136,35 @@ public class AdminTeleportCommand extends CompositeCommand {
     }
 
     private Location getSpot(World world) {
+        assert targetUUID != null;
         Island island = getIslands().getIsland(world, targetUUID);
-        if (island != null && island.getSpawnPoint(world.getEnvironment()) != null) {
-            // Return the defined spawn point
-            return island.getSpawnPoint(world.getEnvironment());
+        if (island == null) {
+            return null;
         }
-        // Return the default island protection center
-        return island.getProtectionCenter().toVector().toLocation(world);
+        return island.getSpawnPoint(world.getEnvironment()) != null ? island.getSpawnPoint(world.getEnvironment()) : island.getProtectionCenter().toVector().toLocation(world);
     }
 
     @Override
     public Optional<List<String>> tabComplete(User user, String alias, List<String> args) {
-        String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
+        String lastArg = !args.isEmpty() ? args.getLast() : "";
         if (args.isEmpty()) {
             // Don't show every player on the server. Require at least the first letter
             return Optional.empty();
         }
-        List<String> options = new ArrayList<>(Util.getOnlinePlayerList(user));
-        return Optional.of(Util.tabLimit(options, lastArg));
+        if (args.size() == 2) {
+            return Optional.of(Util.tabLimit(new ArrayList<>(Util.getOnlinePlayerList(user)), lastArg));
+        }
+
+        if (args.size() == 3) {
+            UUID target = Util.getUUID(args.get(1));
+            return target == null ? Optional.empty()
+                    : Optional
+                            .of(Util.tabLimit(
+                                    new ArrayList<>(IslandGoCommand
+                                            .getNameIslandMap(User.getInstance(target), getWorld()).keySet()),
+                                    lastArg));
+        }
+        return Optional.empty();
     }
 
 }
