@@ -19,7 +19,6 @@ import world.bentobox.bentobox.database.objects.Island;
 import world.bentobox.bentobox.managers.RanksManager;
 import world.bentobox.bentobox.util.Util;
 
-
 public class IslandTeamKickCommand extends ConfirmableCommand {
 
     public IslandTeamKickCommand(CompositeCommand islandTeamCommand) {
@@ -36,7 +35,7 @@ public class IslandTeamKickCommand extends ConfirmableCommand {
     }
 
     @Override
-    public boolean execute(User user, String label, List<String> args) {
+    public boolean canExecute(User user, String label, List<String> args) {
         if (!getIslands().inTeam(getWorld(), user.getUniqueId())) {
             user.sendMessage("general.errors.no-team");
             return false;
@@ -45,7 +44,8 @@ public class IslandTeamKickCommand extends ConfirmableCommand {
         Island island = getIslands().getIsland(getWorld(), user);
         int rank = Objects.requireNonNull(island).getRank(user);
         if (rank < island.getRankCommand(getUsage())) {
-            user.sendMessage("general.errors.insufficient-rank", TextVariables.RANK, user.getTranslation(getPlugin().getRanksManager().getRank(rank)));
+            user.sendMessage("general.errors.insufficient-rank", TextVariables.RANK,
+                    user.getTranslation(RanksManager.getInstance().getRank(rank)));
             return false;
         }
         // If args are not right, show help
@@ -54,27 +54,33 @@ public class IslandTeamKickCommand extends ConfirmableCommand {
             return false;
         }
         // Get target
-        UUID targetUUID = getPlayers().getUUID(args.get(0));
+        UUID targetUUID = getPlayers().getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         if (targetUUID.equals(user.getUniqueId())) {
             user.sendMessage("commands.island.team.kick.cannot-kick");
             return false;
         }
-        if (!getIslands().getMembers(getWorld(), user.getUniqueId()).contains(targetUUID)) {
+        if (!getIslands().getPrimaryIsland(getWorld(), user.getUniqueId()).inTeam(targetUUID)) {
             user.sendMessage("general.errors.not-in-team");
             return false;
         }
 
         int targetRank = Objects.requireNonNull(island).getRank(targetUUID);
         if (rank <= targetRank) {
-            user.sendMessage("commands.island.team.kick.cannot-kick-rank",
-                    TextVariables.NAME, getPlayers().getName(targetUUID));
+            user.sendMessage("commands.island.team.kick.cannot-kick-rank", TextVariables.NAME,
+                    getPlayers().getName(targetUUID));
             return false;
         }
+        return true;
+    }
 
+    @Override
+    public boolean execute(User user, String label, List<String> args) {
+        // Get target
+        UUID targetUUID = getPlayers().getUUID(args.getFirst());
         if (!getSettings().isKickConfirmation()) {
             kick(user, targetUUID);
             return true;
@@ -84,43 +90,41 @@ public class IslandTeamKickCommand extends ConfirmableCommand {
         }
     }
 
-    private void kick(User user, UUID targetUUID) {
-        User target = User.getInstance(targetUUID);
-        Island oldIsland = Objects.requireNonNull(getIslands().getIsland(getWorld(), targetUUID)); // Should never be null because of checks above
-        // Fire event
-        IslandBaseEvent event = TeamEvent.builder()
-                .island(oldIsland)
-                .reason(TeamEvent.Reason.KICK)
-                .involvedPlayer(targetUUID)
-                .build();
-        if (event.isCancelled()) {
-            return;
+    protected boolean kick(User user, UUID targetUUID) {
+        if (targetUUID == null) {
+            return false;
         }
-        target.sendMessage("commands.island.team.kick.player-kicked",
-                TextVariables.GAMEMODE, getAddon().getDescription().getName(),
-                TextVariables.NAME, user.getName(), TextVariables.DISPLAY_NAME, user.getDisplayName());
+        User target = User.getInstance(targetUUID);
+        Island oldIsland = Objects.requireNonNull(getIslands().getIsland(getWorld(), user)); // Should never be
+        // null because of
+        // checks above
+        // Fire event
+        IslandBaseEvent event = TeamEvent.builder().island(oldIsland).reason(TeamEvent.Reason.KICK)
+                .involvedPlayer(targetUUID).build();
+        if (event.isCancelled()) {
+            return false;
+        }
+        target.sendMessage("commands.island.team.kick.player-kicked", TextVariables.GAMEMODE,
+                getAddon().getDescription().getName(), TextVariables.NAME, user.getName(), TextVariables.DISPLAY_NAME,
+                user.getDisplayName());
 
-        getIslands().removePlayer(getWorld(), targetUUID);
+        getIslands().removePlayer(oldIsland, targetUUID);
         // Clean the target player
         getPlayers().cleanLeavingPlayer(getWorld(), target, true, oldIsland);
 
-        user.sendMessage("commands.island.team.kick.success", TextVariables.NAME, target.getName(), TextVariables.DISPLAY_NAME, target.getDisplayName());
-        IslandEvent.builder()
-        .island(oldIsland)
-        .involvedPlayer(user.getUniqueId())
-        .admin(false)
-        .reason(IslandEvent.Reason.RANK_CHANGE)
-        .rankChange(oldIsland.getRank(user), RanksManager.VISITOR_RANK)
-        .build();
+        user.sendMessage("commands.island.team.kick.success", TextVariables.NAME, target.getName(),
+                TextVariables.DISPLAY_NAME, target.getDisplayName());
+        IslandEvent.builder().island(oldIsland).involvedPlayer(user.getUniqueId()).admin(false)
+                .reason(IslandEvent.Reason.RANK_CHANGE).rankChange(oldIsland.getRank(user), RanksManager.VISITOR_RANK)
+                .build();
 
         // Add cooldown for this player and target
         if (getSettings().getInviteCooldown() > 0 && getParent() != null) {
             // Get the invite class from the parent
-            getParent().getSubCommand("invite").ifPresent(c -> c.setCooldown(
-                    oldIsland.getUniqueId(),
-                    targetUUID.toString(),
-                    getSettings().getInviteCooldown() * 60));
+            getParent().getSubCommand("invite").ifPresent(c -> c.setCooldown(oldIsland.getUniqueId(),
+                    targetUUID.toString(), getSettings().getInviteCooldown() * 60));
         }
+        return true;
     }
 
     @Override
@@ -128,11 +132,10 @@ public class IslandTeamKickCommand extends ConfirmableCommand {
         Island island = getIslands().getIsland(getWorld(), user.getUniqueId());
         if (island != null) {
             List<String> options = island.getMemberSet().stream()
-                    .filter(uuid -> island.getRank(uuid) >= RanksManager.MEMBER_RANK)
-                    .map(Bukkit::getOfflinePlayer)
+                    .filter(uuid -> island.getRank(uuid) >= RanksManager.MEMBER_RANK).map(Bukkit::getOfflinePlayer)
                     .map(OfflinePlayer::getName).toList();
 
-            String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
+            String lastArg = !args.isEmpty() ? args.getLast() : "";
             return Optional.of(Util.tabLimit(options, lastArg));
         } else {
             return Optional.empty();
