@@ -1,33 +1,36 @@
 package world.bentobox.bentobox.managers;
 
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Base64;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
+import javax.xml.bind.DatatypeConverter;
+
 import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.Nullable;
+
+import org.bukkit.Bukkit;
 
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParseException;
 import com.google.gson.JsonParser;
 
-import io.github.TheBusyBiscuit.GitHubWebAPI4Java.GitHubWebAPI;
-import io.github.TheBusyBiscuit.GitHubWebAPI4Java.objects.repositories.GitHubContributor;
-import io.github.TheBusyBiscuit.GitHubWebAPI4Java.objects.repositories.GitHubRepository;
 import world.bentobox.bentobox.BentoBox;
 import world.bentobox.bentobox.Settings;
+import world.bentobox.bentobox.api.github.GitHubWebAPI;
+import world.bentobox.bentobox.api.github.objects.repositories.GitHubContributor;
+import world.bentobox.bentobox.api.github.objects.repositories.GitHubRepository;
 import world.bentobox.bentobox.web.catalog.CatalogEntry;
 import world.bentobox.bentobox.web.credits.Contributor;
 
 /**
  * Handles web-related stuff.
  * Should be instantiated after all addons are loaded.
+ * 
  * @author Poslovitch
  * @since 1.3.0
  */
@@ -50,7 +53,7 @@ public class WebManager {
         this.gamemodesCatalog = new ArrayList<>();
         this.contributors = new HashMap<>();
 
-        // Setup the GitHub connection
+        // Set up the GitHub connection
         if (plugin.getSettings().isGithubDownloadData()) {
             this.gitHub = new GitHubWebAPI();
 
@@ -100,10 +103,8 @@ public class WebManager {
             List<String> repositories = new ArrayList<>();
             // Gather all the repositories of installed addons.
             repositories.add("BentoBoxWorld/BentoBox");
-            repositories.addAll(plugin.getAddonsManager().getEnabledAddons()
-                    .stream().map(addon -> addon.getDescription().getRepository())
-                    .filter(repo -> !repo.isEmpty())
-                    .toList());
+            repositories.addAll(plugin.getAddonsManager().getEnabledAddons().stream()
+                    .map(addon -> addon.getDescription().getRepository()).filter(repo -> !repo.isEmpty()).toList());
 
             /* Download the contributors */
             if (plugin.getSettings().isLogGithubDownloadData()) {
@@ -116,7 +117,8 @@ public class WebManager {
                     repo = new GitHubRepository(gh, repository);
                 } catch (Exception e) {
                     if (plugin.getSettings().isLogGithubDownloadData()) {
-                        plugin.logError("An unhandled exception occurred when gathering contributors data from the '" + repository + "' repository...");
+                        plugin.logError("An unhandled exception occurred when gathering contributors data from the '"
+                                + repository + "' repository...");
                         plugin.logStacktrace(e);
                     }
                     repo = null;
@@ -126,9 +128,14 @@ public class WebManager {
                 }
             }
 
-            // People were concerned that the download took ages, so we need to tell them it's over now.
+            // People were concerned that the download took ages, so we need to tell them
+            // it's over now.
             if (plugin.getSettings().isLogGithubDownloadData()) {
                 plugin.log("Successfully downloaded data from GitHub.");
+            }
+
+            if (plugin.getSettings().isCheckBentoBoxUpdates()) {
+                checkForUpdates(gh);
             }
         });
     }
@@ -176,8 +183,10 @@ public class WebManager {
                 this.addonsCatalog.clear();
                 this.gamemodesCatalog.clear();
 
-                catalog.getAsJsonArray("gamemodes").forEach(gamemode -> gamemodesCatalog.add(new CatalogEntry(gamemode.getAsJsonObject())));
-                catalog.getAsJsonArray("addons").forEach(addon -> addonsCatalog.add(new CatalogEntry(addon.getAsJsonObject())));
+                catalog.getAsJsonArray("gamemodes")
+                        .forEach(gamemode -> gamemodesCatalog.add(new CatalogEntry(gamemode.getAsJsonObject())));
+                catalog.getAsJsonArray("addons")
+                        .forEach(addon -> addonsCatalog.add(new CatalogEntry(addon.getAsJsonObject())));
             } catch (JsonParseException e) {
                 if (plugin.getSettings().isLogGithubDownloadData()) {
                     plugin.log("Could not update the Catalog content: the gathered JSON data is malformed.");
@@ -186,43 +195,81 @@ public class WebManager {
         }
     }
 
-    /**
-     *
-     * @param repo - Github repository
-     * @param fileName - file name
-     * @return content or nothing
-     * @since 1.8.0
-     */
     @NonNull
     private String getContent(@NonNull GitHubRepository repo, String fileName) {
         try {
-            String content = repo.getContent(fileName).getContent().replaceAll("\\n", ""); // replaceAll is required here
-            return new String(Base64.getDecoder().decode(content), StandardCharsets.UTF_8);
-        } catch (IllegalAccessException e) {
-            // Fail silently
+            String content = repo.getContent(fileName).getContent();
+            return new String(DatatypeConverter.parseBase64Binary(content.replace("_", "/")));
         } catch (Exception e) {
-            if (plugin.getSettings().isLogGithubDownloadData()) {
-                plugin.logError("An unhandled exception occurred when downloading '" + fileName + "' from GitHub...");
-                plugin.logStacktrace(e);
-            }
+            // Silently fail
         }
         return "";
+    }
+
+    private void checkForUpdates(@NonNull GitHubWebAPI gh) {
+        try {
+            String currentVersion = plugin.getPluginMeta().getVersion();
+            if (currentVersion.contains("LOCAL")) return;
+            String latestTag = new GitHubRepository(gh, "BentoBoxWorld/BentoBox").getLatestTagName();
+            if (!latestTag.isEmpty() && isNewerVersion(currentVersion, latestTag)) {
+                printUpdateBanner(currentVersion, latestTag);
+            }
+        } catch (Exception e) {
+            // Silently fail — same pattern as gatherContributors()
+        }
+    }
+
+    private void printUpdateBanner(String currentVersion, String latestTag) {
+        var cs = Bukkit.getConsoleSender();
+        cs.sendMessage("§6╔══════════════════════════════════════════════╗");
+        cs.sendMessage("§6║  §e★  BentoBox Update Available!  ★           §6║");
+        cs.sendMessage("§6║                                              §6║");
+        cs.sendMessage("§6║  §7Current: §c" + currentVersion);
+        cs.sendMessage("§6║  §7Latest:  §a" + latestTag);
+        cs.sendMessage("§6║                                              §6║");
+        cs.sendMessage("§6║  §7Get it: §bhttps://github.com/BentoBoxWorld/BentoBox/releases");
+        cs.sendMessage("§6╚══════════════════════════════════════════════╝");
+    }
+
+    /**
+     * Returns true if latestTag is strictly newer than currentVersion.
+     * Only the numeric prefix before the first '-' is compared.
+     */
+    static boolean isNewerVersion(String currentVersion, String latestTag) {
+        String current = currentVersion.split("-")[0];
+        String latest = latestTag.replaceFirst("^v", "").split("-")[0];
+        String[] cp = current.split("\\.");
+        String[] lp = latest.split("\\.");
+        int len = Math.max(cp.length, lp.length);
+        for (int i = 0; i < len; i++) {
+            int c = i < cp.length ? parseIntSafe(cp[i]) : 0;
+            int l = i < lp.length ? parseIntSafe(lp[i]) : 0;
+            if (l > c) return true;
+            if (l < c) return false;
+        }
+        return false;
+    }
+
+    private static int parseIntSafe(String s) {
+        try { return Integer.parseInt(s); } catch (NumberFormatException e) { return 0; }
     }
 
     private void gatherContributors(@NonNull GitHubRepository repo) {
         try {
             List<Contributor> addonContributors = new LinkedList<>();
             for (GitHubContributor gitHubContributor : repo.getContributors()) {
-                addonContributors.add(new Contributor(gitHubContributor.getUsername(), gitHubContributor.getContributionsAmount()));
+                addonContributors.add(
+                        new Contributor(gitHubContributor.username(), gitHubContributor.contributionsAmount()));
             }
-            contributors.put(repo.getFullName(), addonContributors);
-        } catch (IllegalAccessException e) {
+            contributors.put(repo.fullName(), addonContributors);
+        } catch (Exception e) {
             // Silently fail
         }
     }
 
     /**
-     * Returns the contents of the addons catalog (may be an empty list).
+     * Returns the contents of the addons catalog (maybe an empty list).
+     * 
      * @return the contents of the addons catalog.
      * @since 1.5.0
      */
@@ -232,7 +279,8 @@ public class WebManager {
     }
 
     /**
-     * Returns the contents of the gamemodes catalog (may be an empty list).
+     * Returns the contents of the gamemodes catalog (maybe an empty list).
+     * 
      * @return the contents of the gamemodes catalog.
      * @since 1.5.0
      */
@@ -253,7 +301,9 @@ public class WebManager {
     }
 
     /**
-     * Returns an optional that may contain the {@link GitHubWebAPI} instance only and only if {@link Settings#isGithubDownloadData()} is {@code true}.
+     * Returns an optional that may contain the {@link GitHubWebAPI} instance only
+     * and only if {@link Settings#isGithubDownloadData()} is {@code true}.
+     * 
      * @return the GitHub instance.
      * @since 1.5.0
      */
